force-app/main/default/objects/vlocity_cmt__FlowStepFields__c/fields/vlocity_cmt__FieldType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__FieldType__c</fullName>
    <label>Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>