force-app/main/default/objects/vlocity_cmt__FlowStepFields__c/fields/vlocity_cmt__FlowStep__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__FlowStep__c</fullName>
    <label>Flow Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>