force-app/main/default/objects/vlocity_cmt__FlowStepFields__c/fields/vlocity_cmt__InOut__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__InOut__c</fullName>
    <label>In/Out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>