force-app/main/default/objects/vlocity_cmt__FlowStepFields__c/fields/vlocity_cmt__JSONFieldName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__JSONFieldName__c</fullName>
    <label>JSON Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>